Containerization-Orchestration/2.Kubernetes/046/k8s/1-express.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  namespace: staging
  labels:
    app: express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/express:v0.1.0
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: express
  namespace: staging
spec:
  selector:
    app: express
  ports:
  - protocol: TCP
    port: 8080
