Containerization-Orchestration/2.Kubernetes/046/k8s/3-http-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-express
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: express.antonputra.com
    http:
      paths:
      - path: /
        backend:
          serviceName: express
          servicePort: 8080
